<resources>
    <string name="app_name">Rattatouille 23</string>
    <string name="form_first_name">FirstName</string>
    <string name="form_last_name">LastName</string>
    <string name="form_email">Email</string>
    <string name="form_dob">dob</string>
    <string name="register_student">Register student</string>
    <string name="crea_utente" />
    <string name="nome">Nome</string>
    <string name="indietro">Indietro</string>
    <string name="prezzo">Prezzo</string>
    <string name="allergeni">Allergeni</string>
    <string name="nota"> nota</string>
    <string name="descrizione">Descrizione</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nuovaPassword">Nuova password</string>
    <string name="ripeti_password">Ripeti password</string>
    <string name="login">Login</string>
    <string name="ho_dimenticato_la_password">Ho dimenticato la password</string>
    <string name="password_dimenticata">Password dimenticata</string>
    <string name="avviso_primo_accesso">N.B. questo step è richiesto in quanto hai effettuato l\'accesso per la prima volta</string>
    <string name="reimposta_password">Reimposta password</string>
    <string name="cognome">Cognome</string>
    <string name="cerca">Cerca</string>
    <string name="esplora_le_categorie">Esplora le categorie</string>
    <string name="dialog_sicuro_di_uscire">Sei sicuro di voler uscire?</string>
    <string name="numero_di_persone_al_tavolo">Numero di persone al tavolo</string>
    <string name="tavolo">Tavolo</string>
    <string name="sala">Sala</string>
    <string name="riepilogo">Riepilogo ⏩</string>
    <string name="breve_nota">Breve nota</string>
    <string name="categoria">Categoria</string>
    <string name="errore">errore</string>
    <string name="dialog_campi_errati">I campi inseriti non sono validi</string>
    <string name="dialog_ord_vuota">ordinazione vuota!</string>
    <string name="esci">esci</string>
    <string name="dialog_cambia_pass">Devi cambiare password, clicca ok e riceverai una mail per aggiornarla</string>
    <string name="dialog_email_recupero_inviata">Email inviata correttamente, controlla la tua casella di posta</string>
    <string name="t">T</string>
    <string name="visualizza_altre_lingue">Visualizza altra lingue</string>
    <string name="riordina_elementi">Riordina elementi</string>
    <string name="salva">salva</string>
    <string name="cercaEmoji">Cerca🔍</string>
    <string name="peanuts">  Peanuts</string>
    <string name="sulphites">Sulphites</string>
    <string name="crustaceans">  Crustaceans</string>
    <string name="gluten">"  Gluten"</string>
    <string name="lupin">"  Lupin"</string>
    <string name="fish">"  Fish"</string>
    <string name="mustard">"  Mustard"</string>
    <string name="soya">"  Soya"</string>
    <string name="tree_nuts">"  Tree nuts "</string>
    <string name="milk">"  Milk"</string>
    <string name="molluscs">"  Molluscs"</string>
    <string name="sesame">"  Sesame"</string>
    <string name="eggs">"  Eggs"</string>
    <string name="aggiungi_ad_un_altra_categoria">"  Aggiungi ad un'altra categoria  "</string>
    <string name="categorie">Categorie</string>
    <string name="lingue">Lingue</string>
    <string name="aggiungi_un_altra_lingua">"  Aggiungi un'altra lingua  "</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="tabella_allergeni">Tabella allergeni</string>
    <string name="prezzo_up">prezzo⤴️</string>
    <string name="nome_up">nome⤴️</string>
    <string name="prezzo_down">prezzo⤵️</string>
    <string name="nome_down">nome⤵️</string>
    <string name="annulla">Annulla</string>
    <string name="invia_ordine">invia ordine</string>
    <string name="continua_l_ordinazione">continua l\'ordinazione</string>
    <string name="dettagli">Dettagli</string>
    <string name="modifica_o_elimina_un_elemento_del_men">Modifica o elimina un elemento del menù</string>
    <string name="ordinazione_numero">Ordinazione Numero:</string>


    <string-array name="array_ruoli">
            <item>Addetto alla cucina</item>
            <item>Addetto alla sala</item>
            <item>Supervisore </item>
        </string-array>

    <string-array name="array_lingue">
        <item>Italiano</item>
        <item>English</item>
        <item>Español</item>
        <item>Deutsch </item>
        <item>Português </item>
        <item>Français </item>
        <item>Polski </item>
        <item>Nederlands </item>
    </string-array>

</resources>