<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_food_icons">

    <Button
        android:id="@+id/button5"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="985dp"

        android:layout_marginBottom="50dp"
        android:text="@string/indietro"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/button6"
        android:layout_width="750dp"
        android:layout_height="100dp"
        android:layout_marginStart="265dp"
        android:layout_marginTop="167dp"

        android:layout_marginEnd="265dp"
        android:background="@drawable/design_button_rounded_green"
        android:fontFamily="@font/roboto_light"

        android:text="@string/cerca"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/button7"
        android:layout_width="750dp"
        android:layout_height="100dp"
        android:layout_marginStart="265dp"
        android:layout_marginTop="95dp"

        android:layout_marginEnd="265dp"
        android:background="@drawable/design_button_rounded_green"
        android:fontFamily="@font/roboto_light"
        android:text="@string/esplora_le_categorie"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />
</androidx.constraintlayout.widget.ConstraintLayout>