<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_food_icons">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCerca"
        android:layout_width="595dp"
        android:layout_height="66dp"
        android:layout_marginStart="339dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="346dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/nome"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/desing_rounded_green_tf"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewElementiRicercati"
        android:layout_width="1278dp"
        android:layout_height="569dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonIndietroCercaElemento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonIndietroCercaElemento"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/indietro"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCercaElemento"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/cercaEmoji"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>