<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="790dp"
        android:layout_height="720dp"
        android:orientation="vertical"
        android:background="@drawable/bkgr_dialog_dettagli"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutStatoOrdinazione"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonIndietroDialogDettagliStatoOrd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/indietro"
                app:cornerRadius="@android:dimen/app_icon_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/dettagli"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.274"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNotaDialogDettagliStatoOrd"
                android:layout_width="430dp"
                android:layout_height="52dp"
                android:hint="@string/breve_nota"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/textView23">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/desing_rounded_green_tf"

                    android:editable="false"
                    tools:ignore="Deprecated" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDescrizioneDialogDettagliStatoOrd"
                android:layout_width="430dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:hint="@string/descrizione"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNotaDialogDettagliStatoOrd">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/desing_rounded_green_tf"
                    android:gravity="top|left"
                    android:editable="false"
                    tools:ignore="Deprecated"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTavoloDialogStatoOrdinazione"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/tavolo"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayoutSalaDialogStatoOrdinazione"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescrizioneDialogDettagliStatoOrd">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/desing_rounded_green_tf"
                    android:editable="false"
                    tools:ignore="Deprecated"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSalaDialogStatoOrdinazione"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="210dp"
                android:hint="@string/sala"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescrizioneDialogDettagliStatoOrd">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/desing_rounded_green_tf"
                    android:editable="false"
                    tools:ignore="Deprecated"

                    />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>