<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk_dialog_err">

    <Button
        android:id="@+id/buttonSiDialogErrTwoBtn"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="50dp"

        android:backgroundTint="@color/black"
        android:text="@string/si"
        android:textSize="34sp"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessaggioDialogErrTwoBtn" />

    <Button
        android:id="@+id/buttonNoDialogErrTwoBtn"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"

        android:backgroundTint="@color/black"
        android:text="@string/no"
        android:textSize="34sp"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessaggioDialogErrTwoBtn" />

    <TextView
        android:id="@+id/textViewMessaggioDialogErrTwoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/errore"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_err" />
</androidx.constraintlayout.widget.ConstraintLayout>