<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_food_icons"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="28dp">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:background="@drawable/design_button_rounded_green"
        android:text="@string/aggiungi_ad_un_altra_categoria"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCategoriaInserimentoNelMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutModificaNome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingModificaCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="152dp"
        android:clickable="true"
        app:backgroundTint="@color/my_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/spinnerCategoriaInserimentoNelMenu"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add_fab"
        app:tint="@color/white" />

    <Spinner
        android:id="@+id/spinnerCategoriaInserimentoNelMenu"
        android:layout_width="489dp"
        android:layout_height="63dp"

        android:layout_marginBottom="4dp"
        android:background="@drawable/design_item_spinner"
        app:layout_constraintBottom_toBottomOf="@+id/floatingModificaCategoria"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutModificaDescrizione"
        android:layout_width="430dp"
        android:layout_height="200dp"
        android:layout_marginStart="50dp"

        android:layout_marginTop="50dp"
        android:hint="@string/descrizione"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/desing_rounded_green_tf"
            android:gravity="top|left" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutModificaPrezzo"
        android:layout_width="430dp"
        android:layout_height="52dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/prezzo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutModificaNome">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="430dp"
            android:layout_height="match_parent"
            android:background="@drawable/desing_rounded_green_tf"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutModificaNome"
        android:layout_width="430dp"
        android:layout_height="52dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="430dp"
            android:layout_height="match_parent"
            android:background="@drawable/desing_rounded_green_tf" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonIndietroModElemGestioneMenu"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/indietro"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/buttonOkModifica"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"
        android:text="@android:string/ok"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/design_button_rounded_green"
        android:text="@string/allergeni"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonModificaAllergeni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutModificaPrezzo" />

    <Button
        android:id="@+id/buttonModificaAllergeni"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="800dp"
        android:text="Modifica"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutModificaPrezzo" />

</androidx.constraintlayout.widget.ConstraintLayout>