<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <TextView
        android:id="@+id/textViewReimpostaPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="322dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="321dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/password_dimenticata"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNuovaPasswordReimpostaPassw"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="357dp"
        android:layout_height="59dp"
        android:layout_marginStart="450dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="473dp"

        android:hint="@string/email"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReimpostaPassword"
        app:startIconDrawable="@drawable/ic_user"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonOkPassDimenticata"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/white"
        android:text="@android:string/ok"
        android:textColor="@color/black"

        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonIndietroPassDimenticata"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginStart="300dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/white"
        android:text="@string/indietro"
        android:textColor="@color/black"

        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>